syntax = "proto3";
import "Protos/shared_messages.proto";
option csharp_namespace = "Client.ChatApp.Protos.Users";
package UserQueriesPkg;

service UserQeriesRPCs{
	rpc GetUsers(Shared.Empty) returns(stream Shared.UserBasicInfoMsg);
}